<resources>
    <string name="app_name">PaymentApp</string>
    <string name="save">Save</string>
    <string name="add_payment">Add payment</string>
    <string name="payments">Payments</string>
    <string name="total_amount">Total Amount</string>
    <string name="provider_icici_citibank_etc">Provider (ICICI, Citibank, etc.)</string>
    <string name="transaction_reference">Transaction reference</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="amount">Amount</string>
    <string name="add_payment_text">Add Payment</string>
    <string name="_0">₹ 0</string>
</resources>